# machine-api-provider-azure

./: .gitignore  BUILD.bazel  Dockerfile  Dockerfile.rhel  Gopkg.toml  Makefile  OWNERS  README.md  azure-role.json  go.mod  go.sum  tools.go
cmd/clusterctl/examples/azure/: machines.yaml.template  machines_no_node.yaml.template
cmd/manager/: main.go
cmd/termination-handler/: main.go
config/: bootstrap.sh  generate-bootstrap.sh  master-machine.yaml  master-user-data-secret.yaml  master-user-data.sh  sshkey  sshkey.pub  worker-machineset.yaml
config/controllers/: deployment.yaml
config/rbac/: rbac_role_binding.yaml
hack/: ci-test.sh  fetch-ext-bins.sh  goimports.sh  update-generated-deep-copies.sh  verify_history.sh
hack/lib/: init.sh
pkg/apis/: BUILD
pkg/apis/azureprovider/: azureprovider.go
pkg/apis/azureprovider/v1alpha1/: BUILD  azuremachineproviderconfig_types.go
pkg/apis/azureprovider/v1beta1/: BUILD  azuremachineproviderconfig_types.go  conversion.go  zz_generated.deepcopy.go
pkg/cloud/azure/: BUILD.bazel  defaults.go  defaults_test.go  errors.go  interfaces.go
pkg/cloud/azure/actuators/: BUILD.bazel  clients.go  getters.go  machine_scope.go  machine_scope_test.go  machine_scope_test_helper.go  scope.go  utils.go
pkg/cloud/azure/actuators/machine/: BUILD.bazel  actuator.go  actuator_test.go  annotations.go  conditions.go  conditions_test.go  reconciler.go  reconciler_test.go  stubs.go
pkg/cloud/azure/actuators/machineset/: azure_instance_types.go  controller.go  controller_suite_test.go  controller_test.go
pkg/cloud/azure/converters/: BUILD.bazel  vm.go
pkg/cloud/azure/decode/: network.go  virtualmachine.go
pkg/cloud/azure/mock/: BUILD.bazel  client_generated.go
pkg/cloud/azure/services/: BUILD.bazel  mock_interfaces.go  mock_interfaces_helper.go
pkg/cloud/azure/services/applicationsecuritygroups/: applicationsecuritygroups.go  applicationsecuritygroups_stack.go  service.go  service_stack.go
pkg/cloud/azure/services/availabilitysets/: availabilitysets.go  service.go
pkg/cloud/azure/services/availabilityzones/: availabilityzones.go  availabilityzones_stack.go  service.go  service_stack.go
pkg/cloud/azure/services/certificates/: certificates.go
pkg/cloud/azure/services/disks/: BUILD.bazel  disks.go  disks_stack.go  service.go  service_stack.go
pkg/cloud/azure/services/groups/: groups.go  groups_stack.go  service.go  service_stack.go
pkg/cloud/azure/services/interfaceloadbalancers/: interfaceloadbalancers.go  interfaceloadbalancers_stack.go  service.go  service_stack.go
pkg/cloud/azure/services/internalloadbalancers/: internalloadbalancers.go  internalloadbalancers_stack.go  service.go  service_stack.go
pkg/cloud/azure/services/networkinterfaces/: BUILD.bazel  networkinterfaces.go  networkinterfaces_stack.go  service.go  service_stack.go
pkg/cloud/azure/services/publicips/: publicips.go  publicips_stack.go  service.go  service_stack.go
pkg/cloud/azure/services/publicloadbalancers/: publicloadbalancers.go  publicloadbalancers_stack.go  service.go  service_stack.go
pkg/cloud/azure/services/resourceskus/: cache.go  cache_test.go  client.go  service.go  sku.go
pkg/cloud/azure/services/resourceskus/mock_resourceskus/: doc.go  resourceskus_mock.go
pkg/cloud/azure/services/routetables/: routetables.go  routetables_stack.go  service.go  service_stack.go
pkg/cloud/azure/services/securitygroups/: securitygroups.go  securitygroups_stack.go  service.go  service_stack.go
pkg/cloud/azure/services/subnets/: service.go  service_stack.go  subnets.go  subnets_stack.go
pkg/cloud/azure/services/virtualmachineextensions/: service.go  service_stack.go  virtualmachineextensions.go  virtualmachineextensions_stack.go
pkg/cloud/azure/services/virtualmachines/: BUILD.bazel  service.go  service_stack.go  virtualmachines.go  virtualmachines_stack.go  virtualmachines_stack_test.go  virtualmachines_test.go
pkg/cloud/azure/services/virtualnetworks/: service.go  service_stack.go  virtualnetworks.go  virtualnetworks_stack.go
pkg/termination/: termination.go  termination_suite_test.go  termination_test.go
pkg/util/cache/ttllru/: ttllru.go  ttllru_test.go
pkg/util/cache/ttllru/mocks/: doc.go  ttllru_mock.go
pkg/version/: version.go
