load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client_generated.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-azure/pkg/cloud/azure/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cloud/azure:go_default_library",
        "//vendor/github.com/golang/mock/gomock:go_default_library",
    ],
)
